--- a/deb/openmediavault/workbench/src/styles.scss
+++ b/deb/openmediavault/workbench/src/styles.scss
@@ -60,12 +60,10 @@ $omv-dark-theme: mat.define-dark-theme(
 );
 
 @include mat.all-component-themes($omv-light-theme);
-@include theme.define-css-variables($omv-light-theme, $omv-typography-config);
 @include theme.all-component-themes('light', $omv-light-theme, $omv-typography-config);
 
 .omv-dark-theme {
   @include mat.all-component-colors($omv-dark-theme);
-  @include theme.define-css-variables($omv-dark-theme, $omv-typography-config);
   @include theme.all-component-themes('dark', $omv-dark-theme, $omv-typography-config);
 }
 
